<resources>
    <string name="app_name">Egypt Guide</string>
    <string name="details_name">detailsName</string>
    <string name="home">Home</string>
    <string name="Tourist">Tourist</string>
    <string name="parks">Parks</string>
    <string name="resturants">Resturants</string>
    <string name="Mashemellow_cafee"><![CDATA[Marshmallo cafe & restaurant is looking for joy and happiness of our customers, We believe on the quality and perfection of our products, The value adding for our customers is our priority.]]></string>
    <string name="addressPrefix">Address :</string>
    <string name="no_available_site">No AVAILABLE Web Site For </string>
    <string name="noAvailablePhone">NO AVAILABLE Telephone for </string>
    <string name="overview">overView:</string>
    <string name="what_you_will_expect">what you will expect :</string>
    <string name="home_overview">Egypt is one of the oldest civilization spots.Ancient Egyptians, Early Greeks, Romans and Arabs, Simply the Land of Mankind History...</string>
    <string name="about_egypt">Egypt has always been known throughout its history as a destination for tourists and travelers since Herodotus visit in ancient history, as he was astonished ...</string>
    <string name="tourist_place1_name">Valley of Kings and Hatshepsut</string>
    <string name="tourist_place2_name">Karnak Temple</string>
    <string name="tourist_place3_name">Dendara and Abydos</string>
    <string name="tourist_place4_name">Deir el Madina From luxour</string>
    <string name="tourist_place5_name">The Museum of Islamic Art</string>
    <string name="tourist_place6_name">Giza Pyramids and Sphinx</string>
    <string name="tourist_place7_name">abu simbel Temples from Aswan</string>
    <string name="tourist_description1">Temple of Queen Hatshepsut</string>
    <string name="tourist_description2">Visit the age-old Temples of Karnak and Luxor</string>
    <string name="tourist_description3">Egyptians made a sacred pilgrimage in historic times.</string>
    <string name="tourist_description4">visit the incredible Valley of the Artisans</string>
    <string name="tourist_description5">Islamic Museum of Arts and Madrasa of Sultan Hassan</string>
    <string name="tourist_description6">pyramids as tombs for the pharaohs</string>
    <string name="tourist_description7">Built during the reign of the great Pharaoh Ramses II</string>
    <string name="tourist_address1">Kings Valley Rd | Deir el-Bahari, Luxor 23512, Egypt</string>
    <string name="tourist_address2">Karnak, Luxor 85111, Egypt</string>
    <string name="tourist_address3">Dendera Temple Complex Abydos</string>
    <string name="tourist_address4">Valley of the Artisans (Deir el-Medina) Valley of the Nobles</string>
    <string name="tourist_address5">Shar\'a Bur Bab El Khalk Square, Cairo 11511, Egypt</string>
    <string name="tourist_address6">Al Haram Str., Giza 12611, Egypt</string>
    <string name="tourist_address7">Aswan Governorate, Egypt</string>
    <string name="tourist_web_site5">https://www.miaegypt.org</string>
    <string name="dendara_overView">This private tour combines the best of Dendara and Abydos and showcases another side of Egypt. Explore the Temple of Hathor and venture into the home of “the Cult of Osiris” to see the site where ancient Egyptians made a sacred pilgrimage in historic times</string>
    <string name="dendara_expect">This private tour of Dendara and Abydos offers travelers a taste of both cities.
        Start things off at the Temple of Hathor, where two Roman fountains flank the entry gate to this incredible structure built as an homage to the goddess of love and pleasure. Learn from your guide how the mud-brick walls date back to the Roman era and explore the two birth houses, Coptic Basilica, sanitarium and sacred lake on the grounds.
        Your guide will point out the additions made to the temple during the Greek, Ptolemy and Roman periods. </string>
    <string name="hatshebsut_overView">A mortuary temple dedicated to the longest ruling female of Ancient Egypt, Queen Hatshepsut. The temple is decorated with statues, sphinxes, and reliefs, which have been meticulously restored over time.</string>
    <string name="hatshebsut_excepect">Drive into the Valley of the Kings, a necropolis for the ancient city of Thebes, a 45-minute drive through fields and mountains. You’ll see the rustic house where Howard Carter lived as he searched for Tutankhamun’s tomb, then visit a series of three elaborate tombs. Guides are not allowed inside the tombs, but you’ll get a briefing on the history of each one before you enter; if you’d like to add a visit to King Tutankhamun’s tomb, your guide can arrange the stop at an additional fee. </string>
    <string name="karnak_overView">Check off the wonders of ancient Luxor, a UNESCO World Heritage site, in just one day on this door-to-door tour with personal guide. Explore the Valley of the Kings, the Temple of Hatshepsut at Deir el Bahari, the Colossi of Memnon, and the Temple of Karnak, then enjoy a felucca sailboat ride</string>
    <string name="karnk_expect">The final resting place of Egypt’s rulers from the 18th to the 20th dynasty, it is home to tombs including the great Pharaoh Ramses II and boy Pharaoh Tutankhamen. The tombs were well stocked with all the material goods a ruler might need in the next world. Most of the decoration inside the tombs still well preserved.
If you wish to Visit the Tomb of The young Pharaoh Tutankhamon</string>
    <string name="abu_simbel_overView">Visit the well-preserved temple complexes of Karnak and Luxor. Karnak is the largest temple complex in Egypt, dedicated to the God Amon, his wife, Mut, and their son Khonso</string>
    <string name="abu_simbel_expect">move to Luxor Temple. It was built by Amunhotep III in 18th Dynasty in the New Kingdom and it was completed by Ramesses II during the 19th Dynasty. King Ramses II was the most famous king in the 19th Dynasty. He ruled Egypt for about 67 years. It was dedicated to the great god Amun-Ra, his wife Mut and their son Khonsu together representing the Theban triad. Enjoy visiting Obelisk of Ramses II in front of the 1st Pylon.
</string>
    <string name="deir_elmadina_overView">Peek into the lives of ordinary ancient Egyptians on this private 4-hour Valley of the Nobles and Valley of the Artisans tour from Luxor. With a private qualified Egyptologist guide, discover the painted tombs of two 18th-dynasty aristocrats — Menna and Nakht — at the Valley of the Nobles. Then, visit the incredible Valley of the Artisans, known as Deir el-Medina.</string>
    <string name="der_elmadina_expect">In the morning your friendly guide and driver will pick you up from your hotel in Luxor by an air-conditioned vehicle to first enjoy a fully guided tour to the Valley of the Nobles. Although very small in size, these tombs include some of the most beautiful paintings of the Theban tombs. The preservation of colour remains astounding. Here, you will visit the two most beautiful tombs: The Tomb of Nakht and the Tomb of Menna. Second, you will visit the Valley of the Workers (Deir el-Medina). This is the place where the workmen of the royal tombs used to live. Here you will see the Temple of Deir el-Medina, which was dedicated to the goddess Hathor. This is the only temple in all of Egypt where you can admire carvings of the Final Judgement.</string>
    <string name="pyramids_overView">Perhaps the most recognizable among the Seven Wonders of the World, the exact origin of these majestic pyramids continues to spark debate.</string>
    <string name="pyramids_expext">Ancient Lower Egypt’s great rulers marked their territory with timeless monuments, larger-than-life relics of their once-mighty reign. In this in-depth, full-day guided visit to the Giza pyramid complex, get a firsthand glimpse of one of the world’s most powerful kingdoms</string>
    <string name="islamic_museum_overView">This museum offers an extraordinary selection of well curated beautifully presented islamic art: paintings, porcelain, ceramics, glasswork, carved wood, metal work and more</string>
    <string name="islamic_museum_expect">The museum is beautiful in itself. The pieces are very well presented. you will find it to be interesting, beautiful, and well done. There were many art students working art pieces of their own, sitting in the corners — for school not sale</string>
    <string name="restaurant1_name">Bab Al Qasr Resturant</string>
    <string name="restaurant2_name"><![CDATA[Marshmallo Cafe & Restaurant]]></string>
    <string name="restaurant3_name">Makai Tukai Restaurant</string>
    <string name="restaurant4_name">Moby Dick </string>
    <string name="restaurant5_name">Fusion 21 Restaurant</string>
    <string name="restaurant6_name">El Kababgy Restaurant</string>
    <string name="restaurant7_name">The Smokery Restaurant</string>
    <string name="restaurant1_description">Lebanese Middle Eastern Egyptian</string>
    <string name="restaurant2_description"><![CDATA[Seafood, Fast Food & International]]></string>
    <string name="restaurant3_description">Sushi, Asian, Thai, Chinese</string>
    <string name="restaurant4_description">International European Egyptian</string>
    <string name="restaurant5_description">Mediterranean, Vegetarian Friendly, Vegan Options, Halal</string>
    <string name="restaurant6_description">Local cuisine, Grill, Egyptian, Barbecue, Middle Eastern</string>
    <string name="restaurant7_description">International, Sushi, French</string>
    <string name="restaurant1_address">Royal Maxim Palace Kempinski Hotel | First Settlement, New Cairo, Cairo 11511, Egypt</string>
    <string name="restaurant2_address">South El-Teseen Street Concord Plaza, Cairo 11511 Egypt</string>
    <string name="restaurant3_address">South Sahl Hashish Road, Magawish District Jaz Aquamarine Resort, Hurghada 84511 Egypt</string>
    <string name="restaurant4_address">Sheraton Road | Sheraton street, opposite the hotel Regina Royal Resort, to the right after exit., Hurghada 84511, Egypt</string>
    <string name="restaurant5_address">Soho Square | Sharks Bay, Sharm El Sheikh 12444, Egypt</string>
    <string name="restaurant6_address">Mövenpick Resort, Naama Bay, Sharm El Sheikh 46619 Egypt</string>
    <string name="restaurant7_address">Katameya Heights | New Cairo - 5th District, Cairo 11511, Egypt</string>
    <string name="restaurant1_webSite">https://www.kempinski.com/en/cairo/royal-maxim-palace-kempinski-cairo/dining/restaurants/bab-al-qasr/?</string>
    <string name="restaurant2_webSite">https://marshmallocafe.com</string>
    <string name="restaurant3_webSite">https://www.jazhotels.com/hurghada/hotels/jaz-aquamarine.aspx</string>
    <string name="restaurant4_webSite">http://www.mobydick-egypt.com</string>
    <string name="restaurant5_webSite">http://sharm-city.com/soho-fusion/</string>
    <string name="restaurant6_webSite">https://www.movenpick.com/en/africa/egypt/sharm-el-sheikh/resort-sharm-el-sheikh/restaurants/restaurants/el-kababgy/?</string>
    <string name="restaurant7_webSite">http://www.thesmokery.net/katameya/?</string>
    <string name="restaurant1_phone">+20 109 711 1151</string>
    <string name="restaurant2_phone">+20 101 187 1192</string>
    <string name="restaurant3_phone">+20 65 3461100</string>
    <string name="restaurant4_phone">+20 65 3440050</string>
    <string name="restaurant5_phone">+20 100 010 9109</string>
    <string name="restaurant6_phone">+20 69 3600081</string>
    <string name="restaurant7_phone">+20 102 601 9175</string>
    <string name="open_map_for_location">open map for location</string>
    <string name="call_me">call me</string>
    <string name="open_web_site">open web site</string>
    <string name="place_image">image of place</string>
</resources>