<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e0f7fa"

    android:fitsSystemWindows="true"
    tools:context=".DetailsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbarDet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbarDet"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/backdrop_detailsAc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/place_image"
                android:fitsSystemWindows="true"
                android:scaleType="fitXY"
                app:layout_collapseMode="parallax"
                />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_detailsAc"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fillViewport="true"


        app:layout_behavior="@string/appbar_scrolling_view_behavior"

        >

        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <ImageButton
                        android:id="@+id/web_imgV"
                        android:layout_width="40dp"

                        android:layout_height="40dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="50dp"
                        android:layout_marginRight="50dp"
                        android:background="@drawable/webs"
                        android:contentDescription="@string/open_web_site"
                        android:scaleType="fitXY" />


                    <ImageButton
                        android:id="@+id/imgCall"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_toStartOf="@+id/web_imgV"
                        android:layout_toLeftOf="@+id/web_imgV"
                        android:background="@android:drawable/sym_call_outgoing"
                        android:contentDescription="@string/call_me"
                        android:padding="8dp" />

                    <ImageButton
                        android:id="@+id/img_map"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_toEndOf="@+id/web_imgV"
                        android:layout_toRightOf="@+id/web_imgV"
                        android:background="@drawable/ic_location"
                        android:contentDescription="@string/open_map_for_location"
                        android:padding="8dp" />


                </RelativeLayout>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@android:color/darker_gray" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"

                    app:layout_behavior="@string/appbar_scrolling_view_behavior">

                    <TextView
                        android:id="@+id/address_txtV"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:padding="8dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <TextView
                        android:id="@+id/overViewTag"
                        style="@style/overViewDetails"
                        android:text="@string/overview"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                    <TextView
                        android:id="@+id/overView_textV"
                        style="@style/expectTextView"

                        />

                    <TextView
                        android:id="@+id/expectTag"
                        style="@style/overViewDetails"
                        android:text="@string/what_you_will_expect"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />


                    <TextView
                        android:id="@+id/expect_txtV"
                        style="@style/expectTextView"
                        android:layout_marginBottom="@dimen/expect_txt_margin_details"

                        />
                </LinearLayout>


            </LinearLayout>
        </android.support.design.widget.CoordinatorLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>

